--- a/10_diasPerdidosPorFumar.html
+++ b/10_diasPerdidosPorFumar.html
@@ -1,6 +1,6 @@
 <script>
     //Problema
-    // diasPerdidosPorFumar - Recebe uma quantidade // de cigarros fumados por dia e a quantidade //// de anos que fuma, e retorna o total de dias /// perdidos, sabendo que cada cigarro reduz a //// vida em 10 minutos.
+    // diasPerdidosPorFumar - Recebe uma quantidade de cigarros fumados por dia e a quantidade de anos que fuma, e retorna o total de dias perdidos, sabendo que cada cigarro reduz a vida em 10 minutos.
 
     //Entrada
     const cigarrosPorDia = parseInt(prompt("Informe quantos cigarros você fuma por dia:"))
